--- a/week4/templates/index.html
+++ b/week4/templates/index.html
@@ -18,7 +18,7 @@
             <button type="submit">登入</button>
         </form>
     </div>
-    <div class="square-seection">
+    <div class="square-section">
         <h2>計算正整數的平方</h2>
         <form onsubmit="return calculateSquare(event)">
             <span style="margin-right: 10px;">正整數</span><input type="text" id="square-input">
