--- a/week6/templates/index.html
+++ b/week6/templates/index.html
@@ -11,7 +11,7 @@
     </div>
     <div class="signUp-section">
         <h2>註冊帳號</h2>
-        <form action="/signup" method="post" onsubmit="return validateForm()">
+        <form action="/signup" method="post">
             <span style="margin-right: 10px;">姓名</span><input type="text" name="name"><br>
             <span style="margin-right: 10px;">帳號</span><input type="text" name="username"><br>
             <span style="margin-right: 10px;">密碼</span><input type="password" name="password"><br>
@@ -20,7 +20,7 @@
     </div>
     <div class="signIn-section">
         <h2>登入系統</h2>
-        <form action="/signin" method="post" onsubmit="return validateForm()">
+        <form action="/signin" method="post">
             <span style="margin-right: 10px;">帳號</span><input type="text" name="username"><br>
             <span style="margin-right: 10px;">密碼</span><input type="password" name="password"><br>
 
